--- a/DCC.html
+++ b/DCC.html
@@ -176,7 +176,7 @@
                             <div class="col-lg-7">
 
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="img/works/2/1.gif" alt="image">
+                                    <img src="img/photo/dsatm_classroom.png" alt="image">
                                     <a data-fancybox="gallery" data-no-swup href="img/works/2/1.gif" class="mil-zoom-btn">
                                         <img src="img/icons/zoom.svg" alt="zoom">
                                     </a>
