--- a/projects.html
+++ b/projects.html
@@ -195,7 +195,8 @@
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="projects.html" class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Car<br>Game</h4>
-                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">The project is a car crash game where players control a car, moving it left and right to avoid obstacles. As players gain points, the game's speed increases, adding to the challenge. The game ends upon collision with an obstacle. This engaging and straightforward game aims to test and improve players' reflexes
+                                                        and decision-making skills.</p>
                                                   
                                                     <div class="mil-link mil-accent mil-arrow-place mil-up">
                                                         <a href="Car_game.html">Read More</a>
